Sprint 31 bugfixes (GIG - 2044) (#233)
* fixed bug with error messages not popping up and build state getting messed up

* changed css of progress background

--- a/src/css/components/shared/footer/footerUploadBar.scss
+++ b/src/css/components/shared/footer/footerUploadBar.scss
@@ -39,6 +39,7 @@
   height: 40px;
 
   text-align: center;
+  background: $grey;
 }
 
 .Footer__upload-error {
